Add all words counts

--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -1282,35 +1282,35 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
-       " ';',\n",
-       " \"'\",\n",
-       " '\"',\n",
-       " ',',\n",
-       " '.',\n",
-       " '-',\n",
        " '?',\n",
-       " 'in',\n",
-       " 'he',\n",
-       " 'of',\n",
-       " 'his',\n",
-       " 'she',\n",
-       " 'our',\n",
+       " '-',\n",
+       " \"'\",\n",
+       " '.',\n",
+       " ';',\n",
+       " ',',\n",
+       " '\"',\n",
        " 'that',\n",
-       " 'their',\n",
-       " 'with',\n",
-       " 'as',\n",
        " 'its',\n",
-       " 'to',\n",
-       " 'the',\n",
-       " 'my',\n",
-       " 'her',\n",
-       " 'it',\n",
-       " 'you',\n",
-       " 'said',\n",
-       " 'is',\n",
-       " 'was',\n",
        " 'and',\n",
-       " 'a']"
+       " 'was',\n",
+       " 'he',\n",
+       " 'our',\n",
+       " 'it',\n",
+       " 'she',\n",
+       " 'of',\n",
+       " 'with',\n",
+       " 'the',\n",
+       " 'to',\n",
+       " 'you',\n",
+       " 'is',\n",
+       " 'in',\n",
+       " 'her',\n",
+       " 'their',\n",
+       " 'my',\n",
+       " 'his',\n",
+       " 'a',\n",
+       " 'said',\n",
+       " 'as']"
       ]
      },
      "execution_count": 9,
@@ -5445,8 +5445,8 @@
           "and",
           "to",
           "in",
-          "that",
           "you",
+          "that",
           "with",
           "is"
          ],
@@ -18217,7 +18217,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b19c338ad0>"
+       "<IPython.lib.display.IFrame at 0x22cfb5a9a00>"
       ]
      },
      "metadata": {},
@@ -18324,35 +18324,35 @@
           "herdans_c",
           "maas",
           "simpsons_index",
-          ";",
-          "'",
-          "\"",
-          ",",
-          ".",
-          "-",
           "?",
-          "in",
-          "he",
-          "of",
-          "his",
-          "she",
-          "our",
+          "-",
+          "'",
+          ".",
+          ";",
+          ",",
+          "\"",
           "that",
-          "their",
-          "with",
-          "as",
           "its",
-          "to",
-          "the",
-          "my",
-          "her",
-          "it",
-          "you",
-          "said",
-          "is",
-          "was",
           "and",
+          "was",
+          "he",
+          "our",
+          "it",
+          "she",
+          "of",
+          "with",
+          "the",
+          "to",
+          "you",
+          "is",
+          "in",
+          "her",
+          "their",
+          "my",
+          "his",
           "a",
+          "said",
+          "as",
           "sequence"
          ],
          "y": [
@@ -18376,35 +18376,35 @@
            4.674229838818244,
            4.334000927187938,
            5.7369655941662066,
-           8.643856189774725,
-           5.298081352932995,
-           8.05889368905357,
-           5.421463768438277,
-           5.906890595608519,
-           6.370837695368309,
            6.584962500721156,
+           6.370837695368309,
+           5.298081352932995,
+           5.906890595608519,
+           8.643856189774725,
+           5.421463768438277,
+           8.05889368905357,
+           6.141355849245541,
+           3.9620321498009794,
+           5.298081352932995,
+           6.528378972354789,
+           7.769387071858584,
+           4.048909600480947,
+           5.943416471633633,
+           9.228818690495881,
+           6.906890595608519,
+           5.643856189774724,
+           6.321928094887363,
+           4.460634365718954,
+           5.395928676331139,
+           6.2746223801090055,
            5.038994131615864,
            7.769387071858584,
-           6.906890595608519,
-           5.395928676331139,
-           9.228818690495881,
-           4.048909600480947,
-           6.141355849245541,
            4.4086397280806935,
-           5.643856189774724,
-           4.8025539357937825,
-           3.9620321498009794,
-           4.460634365718954,
-           6.321928094887363,
            5.058893689053568,
-           7.769387071858584,
-           5.943416471633633,
            5.395928676331139,
-           7.421463768438277,
-           6.2746223801090055,
-           6.528378972354789,
-           5.298081352932995,
            6.184424571137427,
+           7.421463768438277,
+           4.8025539357937825,
            6.381920730956774
           ],
           [
@@ -18419,35 +18419,35 @@
            4.614108846380673,
            4.058893689053568,
            5.22881869049588,
-           3.014499569695115,
-           2.5111422674294848,
-           5.2746223801090055,
-           4.6896598793878495,
-           3.15200309344505,
-           2.685786870240643,
            3.819427754358179,
-           5.038994131615864,
+           2.685786870240643,
+           2.5111422674294848,
+           3.15200309344505,
+           3.014499569695115,
+           4.6896598793878495,
+           5.2746223801090055,
+           4.943416471633633,
+           4.321928094887363,
+           5.674229838818244,
+           5.184424571137427,
            4.099535673550914,
            5.447458976971221,
-           4.321928094887363,
+           4.6589630821649335,
            4.473931188332412,
            5.447458976971221,
-           4.943416471633633,
-           5.447458976971221,
            5.206450877467426,
-           4.674229838818244,
-           4.321928094887363,
-           5.836501267717121,
            5.038994131615864,
-           4.888968687611256,
-           4.925037942318778,
-           4.6589630821649335,
+           5.836501267717121,
            5.321928094887363,
-           2.595823493352923,
            4.980891177052295,
-           5.184424571137427,
-           5.674229838818244,
+           5.038994131615864,
+           4.925037942318778,
+           5.447458976971221,
+           4.888968687611256,
+           4.321928094887363,
            5.34617564113404,
+           2.595823493352923,
+           4.674229838818244,
            6.251939529189444
           ],
           [
@@ -18462,35 +18462,35 @@
            6.584962500721156,
            6.099535673550914,
            4.643856189774724,
-           3.014499569695115,
-           2.5111422674294848,
-           4.556393348524385,
-           4.068947353717491,
-           3.9526942852216433,
-           2.355374577980504,
            4.434402824145775,
-           5.141355849245541,
-           5.980891177052295,
-           5.614108846380673,
-           4.614108846380673,
-           4.109877617772374,
-           5.34617564113404,
+           2.355374577980504,
+           2.5111422674294848,
+           3.9526942852216433,
+           3.014499569695115,
+           4.068947353717491,
+           4.556393348524385,
            4.7858751946471525,
-           5.500898235932682,
-           5.500898235932682,
-           4.943416471633633,
            3.897901812381264,
+           5.079071570991199,
            5.251538766995965,
-           4.614108846380673,
-           4.980891177052295,
-           4.473931188332412,
+           5.980891177052295,
+           5.34617564113404,
            4.6589630821649335,
-           6.184424571137427,
-           1.5688227980659033,
-           4.980891177052295,
+           4.109877617772374,
+           5.614108846380673,
+           5.500898235932682,
+           4.614108846380673,
            5.251538766995965,
+           6.184424571137427,
+           4.980891177052295,
+           5.141355849245541,
+           4.473931188332412,
+           5.500898235932682,
+           4.980891177052295,
+           4.614108846380673,
            5.079071570991199,
-           5.079071570991199,
+           1.5688227980659033,
+           4.943416471633633,
            5.821848334481725
           ],
           [
@@ -18505,35 +18505,35 @@
            5.058893689053568,
            4.487351704094734,
            4.753085259529483,
-           0.8679716063162161,
-           2.7571434761038365,
-           5.251538766995965,
-           6.019365324866931,
-           3.15200309344505,
-           3.1150765244466925,
            6.141355849245541,
-           5.141355849245541,
-           4.853779259148956,
-           5.769387071858584,
-           5.769387071858584,
-           3.3159293542659194,
-           4.980891177052295,
+           3.1150765244466925,
+           2.7571434761038365,
+           3.15200309344505,
+           0.8679716063162161,
+           6.019365324866931,
+           5.251538766995965,
            4.643856189774724,
-           6.421463768438277,
-           4.8025539357937825,
-           5.500898235932682,
            5.447458976971221,
-           4.614108846380673,
-           4.614108846380673,
-           5,
-           4.473931188332412,
-           4.906890595608519,
-           5.141355849245541,
-           3.7941904628591563,
-           4.370837695368309,
-           5.528378972354789,
            5.614108846380673,
+           5.528378972354789,
+           4.853779259148956,
+           4.980891177052295,
+           4.906890595608519,
+           3.3159293542659194,
+           5.769387071858584,
+           4.8025539357937825,
+           4.614108846380673,
+           4.614108846380673,
+           5.141355849245541,
+           4.370837695368309,
+           5.141355849245541,
+           4.473931188332412,
+           6.421463768438277,
+           5,
+           5.769387071858584,
            6.370837695368309,
+           3.7941904628591563,
+           5.500898235932682,
            5.8064226632230955
           ],
           [
@@ -18548,35 +18548,35 @@
            4.7858751946471525,
            3.9434164716336326,
            4.2746223801090055,
-           0.8679716063162161,
-           2.7571434761038365,
-           4.643856189774724,
-           4.6896598793878495,
-           4.15200309344505,
-           3.327951882515132,
            3.599462070416271,
-           6.421463768438277,
-           4.962032149800979,
-           5.321928094887363,
-           4.721024050297185,
-           4.473931188332412,
-           6.584962500721156,
+           3.327951882515132,
+           2.7571434761038365,
+           4.15200309344505,
+           0.8679716063162161,
+           4.6896598793878495,
+           4.643856189774724,
            7.643856189774724,
-           5.500898235932682,
-           5.206450877467426,
-           4.753085259529483,
            5.7369655941662066,
-           5.7369655941662066,
-           4.906890595608519,
-           4.980891177052295,
-           3.853779259148956,
-           6.184424571137427,
-           5.141355849245541,
-           3.1098776177723737,
-           6.528378972354789,
-           5.22881869049588,
            5.395928676331139,
+           5.22881869049588,
+           4.962032149800979,
+           6.584962500721156,
+           6.184424571137427,
+           4.473931188332412,
+           5.321928094887363,
+           5.206450877467426,
+           4.906890595608519,
+           5.7369655941662066,
+           5.141355849245541,
+           6.528378972354789,
+           6.421463768438277,
+           3.853779259148956,
+           5.500898235932682,
+           4.980891177052295,
+           4.721024050297185,
            5.674229838818244,
+           3.1098776177723737,
+           4.753085259529483,
            6.077717326212043
           ],
           [
@@ -18591,35 +18591,35 @@
            5.079071570991199,
            4.334000927187938,
            5.8712666858777975,
-           0.8679716063162161,
-           2.5111422674294848,
-           3.9526942852216433,
-           4.460634365718954,
-           4.383328639551506,
-           2.355374577980504,
            4.584962500721156,
-           4.8712666858777975,
-           4.162729500038108,
-           5.769387071858584,
-           3.9159357352115256,
-           3.3159293542659194,
-           5.370837695368309,
+           2.355374577980504,
+           2.5111422674294848,
+           4.383328639551506,
+           0.8679716063162161,
+           4.460634365718954,
+           3.9526942852216433,
            5.7369655941662066,
-           5.447458976971221,
-           4.925037942318778,
-           4.943416471633633,
            4.4086397280806935,
-           5.500898235932682,
-           7.321928094887363,
-           6.705256734438868,
-           3.853779259148956,
-           5,
-           6.584962500721156,
-           1.5688227980659033,
-           6.141355849245541,
-           5.473931188332412,
            5.079071570991199,
+           5.473931188332412,
+           4.162729500038108,
+           5.370837695368309,
+           5,
+           3.3159293542659194,
+           5.769387071858584,
+           4.925037942318778,
+           7.321928094887363,
+           5.500898235932682,
+           6.584962500721156,
+           6.141355849245541,
+           4.8712666858777975,
+           3.853779259148956,
+           5.447458976971221,
+           6.705256734438868,
+           3.9159357352115256,
            5.251538766995965,
+           1.5688227980659033,
+           4.943416471633633,
            5.917538499160729
           ]
          ]
@@ -19491,7 +19491,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b1fe292c00>"
+       "<IPython.lib.display.IFrame at 0x22cfcf7e6f0>"
       ]
      },
      "metadata": {},
@@ -19534,16 +19534,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.23640658850666155,
-          0.2338910467776301,
-          0.22464702753332738,
-          0.22370593791612003,
-          0.22351471163966316,
-          0.2225023683723906,
-          0.2221660968523887,
-          0.2216272931673139,
-          0.21171846941168798,
-          0.2019250386466595
+          0.2364065885066616,
+          0.23389104677763012,
+          0.2246470275333274,
+          0.22370593791612006,
+          0.2235147116396632,
+          0.22250236837239062,
+          0.22216609685238872,
+          0.22162729316731383,
+          0.2117184694116881,
+          0.20192503864665945
          ],
          "xaxis": "x",
          "y": [
@@ -19568,16 +19568,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.33586852644934395,
-          0.28198598477524944,
-          0.26787523787753137,
-          0.2570933148907148,
-          0.2561636048862146,
-          0.255438594333363,
-          0.23007171443066818,
-          0.21739824798215182,
-          0.20844860229598106,
-          0.19931926961207957
+          0.3358685264493441,
+          0.2819859847752486,
+          0.2678752378775306,
+          0.25709331489071713,
+          0.2561636048862144,
+          0.255438594333362,
+          0.23007171443066757,
+          0.21739824798215426,
+          0.20844860229598358,
+          0.19931926961207821
          ],
          "xaxis": "x2",
          "y": [
@@ -20451,8 +20451,8 @@
           0.375
          ],
          "range": [
-          0.2019250386466595,
-          0.23640658850666155
+          0.20192503864665945,
+          0.2364065885066616
          ],
          "title": {
           "text": "Importance"
@@ -20465,8 +20465,8 @@
           1
          ],
          "range": [
-          0.19931926961207957,
-          0.33586852644934395
+          0.19931926961207821,
+          0.3358685264493441
          ]
         },
         "yaxis": {
@@ -20520,7 +20520,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b207431820>"
+       "<IPython.lib.display.IFrame at 0x22cfcf7e6f0>"
       ]
      },
      "metadata": {},
