Add words distribution

--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -1282,35 +1282,35 @@
        " 'herdans_c',\n",
        " 'maas',\n",
        " 'simpsons_index',\n",
-       " '?',\n",
-       " '-',\n",
        " \"'\",\n",
-       " '.',\n",
+       " '-',\n",
+       " '\"',\n",
+       " '?',\n",
        " ';',\n",
        " ',',\n",
-       " '\"',\n",
-       " 'that',\n",
-       " 'its',\n",
-       " 'and',\n",
+       " '.',\n",
+       " 'their',\n",
+       " 'of',\n",
+       " 'it',\n",
        " 'was',\n",
        " 'he',\n",
-       " 'our',\n",
-       " 'it',\n",
        " 'she',\n",
-       " 'of',\n",
-       " 'with',\n",
-       " 'the',\n",
-       " 'to',\n",
-       " 'you',\n",
-       " 'is',\n",
-       " 'in',\n",
-       " 'her',\n",
-       " 'their',\n",
-       " 'my',\n",
-       " 'his',\n",
-       " 'a',\n",
        " 'said',\n",
-       " 'as']"
+       " 'my',\n",
+       " 'the',\n",
+       " 'our',\n",
+       " 'a',\n",
+       " 'as',\n",
+       " 'to',\n",
+       " 'her',\n",
+       " 'with',\n",
+       " 'you',\n",
+       " 'its',\n",
+       " 'his',\n",
+       " 'and',\n",
+       " 'is',\n",
+       " 'that',\n",
+       " 'in']"
       ]
      },
      "execution_count": 9,
@@ -5445,8 +5445,8 @@
           "and",
           "to",
           "in",
-          "you",
           "that",
+          "you",
           "with",
           "is"
          ],
@@ -18217,7 +18217,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22cfb5a9a00>"
+       "<IPython.lib.display.IFrame at 0x2767e04e120>"
       ]
      },
      "metadata": {},
@@ -18324,35 +18324,35 @@
           "herdans_c",
           "maas",
           "simpsons_index",
-          "?",
-          "-",
           "'",
-          ".",
+          "-",
+          "\"",
+          "?",
           ";",
           ",",
-          "\"",
-          "that",
-          "its",
-          "and",
+          ".",
+          "their",
+          "of",
+          "it",
           "was",
           "he",
-          "our",
-          "it",
           "she",
-          "of",
-          "with",
-          "the",
-          "to",
-          "you",
-          "is",
-          "in",
-          "her",
-          "their",
-          "my",
-          "his",
-          "a",
           "said",
+          "my",
+          "the",
+          "our",
+          "a",
           "as",
+          "to",
+          "her",
+          "with",
+          "you",
+          "its",
+          "his",
+          "and",
+          "is",
+          "that",
+          "in",
           "sequence"
          ],
          "y": [
@@ -18376,35 +18376,35 @@
            4.674229838818244,
            4.334000927187938,
            5.7369655941662066,
-           6.584962500721156,
-           6.370837695368309,
            5.298081352932995,
-           5.906890595608519,
+           6.370837695368309,
+           8.05889368905357,
+           6.584962500721156,
            8.643856189774725,
            5.421463768438277,
-           8.05889368905357,
-           6.141355849245541,
-           3.9620321498009794,
-           5.298081352932995,
+           5.906890595608519,
+           4.4086397280806935,
+           6.906890595608519,
+           5.943416471633633,
            6.528378972354789,
            7.769387071858584,
-           4.048909600480947,
-           5.943416471633633,
            9.228818690495881,
-           6.906890595608519,
-           5.643856189774724,
-           6.321928094887363,
-           4.460634365718954,
-           5.395928676331139,
-           6.2746223801090055,
-           5.038994131615864,
-           7.769387071858584,
-           4.4086397280806935,
-           5.058893689053568,
-           5.395928676331139,
-           6.184424571137427,
            7.421463768438277,
+           5.058893689053568,
+           6.321928094887363,
+           4.048909600480947,
+           6.184424571137427,
            4.8025539357937825,
+           4.460634365718954,
+           7.769387071858584,
+           5.643856189774724,
+           5.395928676331139,
+           3.9620321498009794,
+           5.395928676331139,
+           5.298081352932995,
+           6.2746223801090055,
+           6.141355849245541,
+           5.038994131615864,
            6.381920730956774
           ],
           [
@@ -18419,35 +18419,35 @@
            4.614108846380673,
            4.058893689053568,
            5.22881869049588,
-           3.819427754358179,
-           2.685786870240643,
            2.5111422674294848,
-           3.15200309344505,
+           2.685786870240643,
+           5.2746223801090055,
+           3.819427754358179,
            3.014499569695115,
            4.6896598793878495,
-           5.2746223801090055,
-           4.943416471633633,
-           4.321928094887363,
-           5.674229838818244,
-           5.184424571137427,
-           4.099535673550914,
+           3.15200309344505,
+           5.447458976971221,
            5.447458976971221,
            4.6589630821649335,
+           5.184424571137427,
+           4.099535673550914,
            4.473931188332412,
-           5.447458976971221,
-           5.206450877467426,
-           5.038994131615864,
-           5.836501267717121,
-           5.321928094887363,
-           4.980891177052295,
-           5.038994131615864,
-           4.925037942318778,
-           5.447458976971221,
-           4.888968687611256,
-           4.321928094887363,
-           5.34617564113404,
            2.595823493352923,
+           4.888968687611256,
+           5.038994131615864,
+           5.447458976971221,
+           5.34617564113404,
            4.674229838818244,
+           5.836501267717121,
+           4.925037942318778,
+           5.206450877467426,
+           5.321928094887363,
+           4.321928094887363,
+           4.321928094887363,
+           5.674229838818244,
+           4.980891177052295,
+           4.943416471633633,
+           5.038994131615864,
            6.251939529189444
           ],
           [
@@ -18462,35 +18462,35 @@
            6.584962500721156,
            6.099535673550914,
            4.643856189774724,
-           4.434402824145775,
-           2.355374577980504,
            2.5111422674294848,
-           3.9526942852216433,
+           2.355374577980504,
+           4.556393348524385,
+           4.434402824145775,
            3.014499569695115,
            4.068947353717491,
-           4.556393348524385,
-           4.7858751946471525,
-           3.897901812381264,
-           5.079071570991199,
+           3.9526942852216433,
+           5.500898235932682,
+           5.614108846380673,
+           4.6589630821649335,
            5.251538766995965,
            5.980891177052295,
-           5.34617564113404,
-           4.6589630821649335,
            4.109877617772374,
-           5.614108846380673,
-           5.500898235932682,
-           4.614108846380673,
-           5.251538766995965,
-           6.184424571137427,
+           1.5688227980659033,
            4.980891177052295,
-           5.141355849245541,
+           4.614108846380673,
+           5.34617564113404,
+           5.079071570991199,
+           4.943416471633633,
+           5.251538766995965,
            4.473931188332412,
            5.500898235932682,
-           4.980891177052295,
+           6.184424571137427,
+           3.897901812381264,
            4.614108846380673,
            5.079071570991199,
-           1.5688227980659033,
-           4.943416471633633,
+           4.980891177052295,
+           4.7858751946471525,
+           5.141355849245541,
            5.821848334481725
           ],
           [
@@ -18505,35 +18505,35 @@
            5.058893689053568,
            4.487351704094734,
            4.753085259529483,
-           6.141355849245541,
-           3.1150765244466925,
            2.7571434761038365,
-           3.15200309344505,
+           3.1150765244466925,
+           5.251538766995965,
+           6.141355849245541,
            0.8679716063162161,
            6.019365324866931,
-           5.251538766995965,
-           4.643856189774724,
-           5.447458976971221,
-           5.614108846380673,
+           3.15200309344505,
+           6.421463768438277,
+           5.769387071858584,
+           4.906890595608519,
            5.528378972354789,
            4.853779259148956,
-           4.980891177052295,
-           4.906890595608519,
            3.3159293542659194,
-           5.769387071858584,
-           4.8025539357937825,
-           4.614108846380673,
-           4.614108846380673,
-           5.141355849245541,
-           4.370837695368309,
-           5.141355849245541,
-           4.473931188332412,
-           6.421463768438277,
-           5,
-           5.769387071858584,
-           6.370837695368309,
            3.7941904628591563,
+           5,
+           4.614108846380673,
+           4.980891177052295,
+           6.370837695368309,
            5.500898235932682,
+           4.614108846380673,
+           4.473931188332412,
+           4.8025539357937825,
+           5.141355849245541,
+           5.447458976971221,
+           5.769387071858584,
+           5.614108846380673,
+           4.370837695368309,
+           4.643856189774724,
+           5.141355849245541,
            5.8064226632230955
           ],
           [
@@ -18548,35 +18548,35 @@
            4.7858751946471525,
            3.9434164716336326,
            4.2746223801090055,
-           3.599462070416271,
-           3.327951882515132,
            2.7571434761038365,
-           4.15200309344505,
+           3.327951882515132,
+           4.643856189774724,
+           3.599462070416271,
            0.8679716063162161,
            4.6896598793878495,
-           4.643856189774724,
-           7.643856189774724,
-           5.7369655941662066,
-           5.395928676331139,
+           4.15200309344505,
+           5.500898235932682,
+           5.321928094887363,
+           6.184424571137427,
            5.22881869049588,
            4.962032149800979,
-           6.584962500721156,
-           6.184424571137427,
            4.473931188332412,
-           5.321928094887363,
-           5.206450877467426,
-           4.906890595608519,
-           5.7369655941662066,
-           5.141355849245541,
-           6.528378972354789,
-           6.421463768438277,
-           3.853779259148956,
-           5.500898235932682,
-           4.980891177052295,
-           4.721024050297185,
-           5.674229838818244,
            3.1098776177723737,
+           4.980891177052295,
+           4.906890595608519,
+           6.584962500721156,
+           5.674229838818244,
            4.753085259529483,
+           5.7369655941662066,
+           3.853779259148956,
+           5.206450877467426,
+           5.141355849245541,
+           5.7369655941662066,
+           4.721024050297185,
+           5.395928676331139,
+           6.528378972354789,
+           7.643856189774724,
+           6.421463768438277,
            6.077717326212043
           ],
           [
@@ -18591,35 +18591,35 @@
            5.079071570991199,
            4.334000927187938,
            5.8712666858777975,
-           4.584962500721156,
-           2.355374577980504,
            2.5111422674294848,
-           4.383328639551506,
+           2.355374577980504,
+           3.9526942852216433,
+           4.584962500721156,
            0.8679716063162161,
            4.460634365718954,
-           3.9526942852216433,
-           5.7369655941662066,
-           4.4086397280806935,
-           5.079071570991199,
+           4.383328639551506,
+           5.447458976971221,
+           5.769387071858584,
+           5,
            5.473931188332412,
            4.162729500038108,
-           5.370837695368309,
-           5,
            3.3159293542659194,
-           5.769387071858584,
-           4.925037942318778,
-           7.321928094887363,
-           5.500898235932682,
-           6.584962500721156,
-           6.141355849245541,
-           4.8712666858777975,
-           3.853779259148956,
-           5.447458976971221,
-           6.705256734438868,
-           3.9159357352115256,
-           5.251538766995965,
            1.5688227980659033,
+           6.705256734438868,
+           7.321928094887363,
+           5.370837695368309,
+           5.251538766995965,
            4.943416471633633,
+           5.500898235932682,
+           3.853779259148956,
+           4.925037942318778,
+           6.584962500721156,
+           4.4086397280806935,
+           3.9159357352115256,
+           5.079071570991199,
+           6.141355849245541,
+           5.7369655941662066,
+           4.8712666858777975,
            5.917538499160729
           ]
          ]
@@ -19491,7 +19491,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22cfcf7e6f0>"
+       "<IPython.lib.display.IFrame at 0x2767e739d90>"
       ]
      },
      "metadata": {},
@@ -19536,14 +19536,14 @@
          "x": [
           0.2364065885066616,
           0.23389104677763012,
-          0.2246470275333274,
-          0.22370593791612006,
-          0.2235147116396632,
+          0.22464702753332746,
+          0.2237059379161201,
+          0.22351471163966322,
           0.22250236837239062,
-          0.22216609685238872,
-          0.22162729316731383,
-          0.2117184694116881,
-          0.20192503864665945
+          0.22216609685238875,
+          0.22162729316731386,
+          0.21171846941168798,
+          0.20192503864665948
          ],
          "xaxis": "x",
          "y": [
@@ -19568,16 +19568,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.3358685264493441,
-          0.2819859847752486,
+          0.33586852644934395,
+          0.28198598477524867,
           0.2678752378775306,
-          0.25709331489071713,
-          0.2561636048862144,
-          0.255438594333362,
-          0.23007171443066757,
-          0.21739824798215426,
-          0.20844860229598358,
-          0.19931926961207821
+          0.2570933148907171,
+          0.2561636048862146,
+          0.2554385943333619,
+          0.23007171443066754,
+          0.21739824798215435,
+          0.20844860229598364,
+          0.19931926961207838
          ],
          "xaxis": "x2",
          "y": [
@@ -20451,7 +20451,7 @@
           0.375
          ],
          "range": [
-          0.20192503864665945,
+          0.20192503864665948,
           0.2364065885066616
          ],
          "title": {
@@ -20465,8 +20465,8 @@
           1
          ],
          "range": [
-          0.19931926961207821,
-          0.3358685264493441
+          0.19931926961207838,
+          0.33586852644934395
          ]
         },
         "yaxis": {
@@ -20520,7 +20520,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22cfcf7e6f0>"
+       "<IPython.lib.display.IFrame at 0x276211bb440>"
       ]
      },
      "metadata": {},
