--- a/3_writing_style_dataset.ipynb
+++ b/3_writing_style_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,9 +535,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m entropy_analysis \u001b[38;5;241m=\u001b[39m WritingStyleEntropyAnalysis(\n\u001b[0;32m      2\u001b[0m     settings\u001b[38;5;241m=\u001b[39msettings,\n\u001b[0;32m      3\u001b[0m     feature_extractor\u001b[38;5;241m=\u001b[39mfeature_extractor,\n\u001b[0;32m      4\u001b[0m )\n\u001b[1;32m----> 5\u001b[0m entropy_analysis_results \u001b[38;5;241m=\u001b[39m \u001b[43mentropy_analysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manalyze\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpreprocessing_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpreprocessing_results\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmetrics_analysis_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetrics_analysis_results\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\entropy\\writing_style\\writing_style_entropy_analysis.py:93\u001b[0m, in \u001b[0;36mWritingStyleEntropyAnalysis.analyze\u001b[1;34m(self, preprocessing_results, metrics_analysis_results)\u001b[0m\n\u001b[0;32m     85\u001b[0m entropy_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_chunks_features_entropies(\n\u001b[0;32m     86\u001b[0m     metrics_analysis_results\u001b[38;5;241m=\u001b[39mmetrics_analysis_results,\n\u001b[0;32m     87\u001b[0m     entropy_results\u001b[38;5;241m=\u001b[39mentropy_results\n\u001b[0;32m     88\u001b[0m )\n\u001b[0;32m     89\u001b[0m entropy_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_chunks_sequence_entropy(\n\u001b[0;32m     90\u001b[0m     preprocessing_results\u001b[38;5;241m=\u001b[39mpreprocessing_results,\n\u001b[0;32m     91\u001b[0m     entropy_results\u001b[38;5;241m=\u001b[39mentropy_results\n\u001b[0;32m     92\u001b[0m )\n\u001b[1;32m---> 93\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_calculate_entropies_average_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mentropy_results\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     95\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m entropy_results\n",
+      "File \u001b[1;32mc:\\Projects\\Thesis\\src\\analysis\\entropy\\writing_style\\writing_style_entropy_analysis.py:239\u001b[0m, in \u001b[0;36mWritingStyleEntropyAnalysis._calculate_entropies_average_data\u001b[1;34m(self, entropy_results)\u001b[0m\n\u001b[0;32m    237\u001b[0m N \u001b[38;5;241m=\u001b[39m feature_entropies\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    238\u001b[0m data \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack((feature_entropies, sequence_entropies\u001b[38;5;241m.\u001b[39mreshape(N, \u001b[38;5;241m1\u001b[39m), ws_words_entropies\u001b[38;5;241m.\u001b[39mreshape(N, \u001b[38;5;241m1\u001b[39m)))\n\u001b[1;32m--> 239\u001b[0m averages \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeature_averages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msequence_average\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mws_words_average\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    240\u001b[0m std_errors \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(feature_std_errors, sequence_std_error, ws_words_std_error)\n\u001b[0;32m    241\u001b[0m average_chunk_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_find_collections_average_chunk(data, averages, std_errors)\n",
+      "File \u001b[1;32mc:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\numpy\\lib\\function_base.py:5618\u001b[0m, in \u001b[0;36mappend\u001b[1;34m(arr, values, axis)\u001b[0m\n\u001b[0;32m   5616\u001b[0m     values \u001b[38;5;241m=\u001b[39m ravel(values)\n\u001b[0;32m   5617\u001b[0m     axis \u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mndim\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m-> 5618\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.float64' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
    "source": [
     "entropy_analysis = WritingStyleEntropyAnalysis(\n",
     "    settings=settings,\n",
@@ -551,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
