Add words distribution notebook

--- a/0_words_distribution.ipynb
+++ b/0_words_distribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,11 +422,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_words = TwitterDataset(settings).load().get_words()"
+    "twitter_dataset = TwitterDataset(settings).load()\n",
+    "twitter_words = twitter_dataset.get_words()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit_dataset = RedditDataset(settings).load()\n",
+    "reddit_words = reddit_dataset.get_words()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "news_dataset = NewsDataset(settings).load()\n",
+    "news_words = news_dataset.get_words()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legal_dataset = LegalDataset(settings).load()\n",
+    "legal_words = legal_dataset.get_words()"
    ]
   },
   {
@@ -435,25 +466,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reddit_words = RedditDataset(settings).load().get_words()"
+    "daigt_dataset = WordsDistributionDaigtDataset(settings).load()\n",
+    "daigt_words = daigt_dataset.get_words()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "news_words = NewsDataset(settings).load().get_words()"
+    "ws_dataset = WordsDistributionWritingStyleDataset(settings).load()\n",
+    "ws_words = ws_dataset.get_words()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Twitter corpora: 20400779 | words: 3237183\n",
+      "Reddit corpora: 6775957 | words: 1082565\n",
+      "News corpora: 22126434 | words: 3354112\n",
+      "Legal corpora: 26807643 | words: 3885683\n",
+      "DAIGT corpora: 169454766 | words: 28515512\n",
+      "Writing Style corpora: 74653814 | words: 13569455\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Twitter corpora: {len(twitter_dataset.corpus)} | words: {len(twitter_words)}\")\n",
+    "print(f\"Reddit corpora: {len(reddit_dataset.corpus)} | words: {len(reddit_words)}\")\n",
+    "print(f\"News corpora: {len(news_dataset.corpus)} | words: {len(news_words)}\")\n",
+    "print(f\"Legal corpora: {len(legal_dataset.corpus)} | words: {len(legal_words)}\")\n",
+    "print(f\"DAIGT corpora: {len(daigt_dataset.corpus)} | words: {len(daigt_words)}\")\n",
+    "print(f\"Writing Style corpora: {len(ws_dataset.corpus)} | words: {len(ws_words)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 53644510\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = twitter_words + reddit_words + news_words + legal_words + daigt_words + ws_words\n",
+    "print(f\"Total words: {len(all_words)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "legal_words = LegalDataset(settings).load().get_words()"
+    "from collections import Counter\n",
+    "\n",
+    "word_counts = Counter(all_words)\n",
+    "word_distribution = {word: count/len(all_words) for word, count in word_counts.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(settings.paths.all_word_distribution_dumo_file):\n",
+    "    os.remove(settings.paths.all_word_distribution_dumo_file)\n",
+    "with open(settings.paths.all_word_distribution_dumo_file, 'wb') as file:\n",
+    "    dill.dump(\n",
+    "        obj={\n",
+    "            \"word_distribution\": word_distribution,\n",
+    "        },  \n",
+    "        file=file\n",
+    "    )"
    ]
   }
  ],
